完善京东代码并添加京东邪恶测试